# positorium

./: .gitignore  Cargo 2.toml  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  THEORY.md  TODO.md  bareclad.html  positorium.html  positorium.json
.github/: FUNDING.yml  copilot-instructions.md
benches/: benchmark.rs
scripts/: positorium.ps1  positorium.sh
src/: construct.rs  datatype.rs  error.rs  lib.rs  main.rs  persist.rs  server.rs  traqula.rs  wasm.rs
tests/: cross_search_binding.rs  limit_clause.rs  multi_search_limits.rs  persistence_modes.rs  predicates.rs  single_married_snapshot.rs  time_filters.rs  value_var_comparisons.rs
traqula/: cross-search.traqula  multi-match.traqula  timetest.traqula
