[package]
name = "positorium"
version = "0.1.4"
edition = "2024"
authors = ["Lars Rönnbäck <lars@positorium.com>"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["server", "persistence", "cli"]
server = ["tokio", "axum", "tokio-stream", "futures-util", "tower-http"]
persistence = ["rusqlite"]
cli = ["config"]
wasm = ["wasm-bindgen", "getrandom/js"]

[dependencies]
# core dependencies
chrono = "0.4.38"
bimap = "0.6.3"
pest = "2.8"
pest_derive = "2.8"
regex = "1.10"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roaring = "0.11"
seahash = "4.1.0"
bigdecimal = "0.4"
jsondata = "0.8.1"
lazy_static = "1.5"
blake3 = "1.8.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
wasm-bindgen = { version = "0.2.100", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# Optional dependencies for features
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
axum = { version = "0.8.6", features = ["ws"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-util = { version = "0.3", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
rusqlite = { version = "0.37", features = ["chrono", "bundled"], optional = true }
config = { version = "0.15.18", optional = true }

[dev-dependencies]
criterion = { version = "0.7", default-features = false }
wasm-bindgen-test = "0.3"

[[bench]]
name = "benchmark"
harness = false
